css/screen.css
@font-face {
    font-family: 'FontAwesome';
    src: url("/font/fontawesome-webfont.eot");
    src: url("/font/fontawesome-webfont.eot?#iefix") format("embedded-opentype"),url("/font/fontawesome-webfont.woff") format("woff"),url("/font/fontawesome-webfont.ttf") format("truetype"),url("/font/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"),url("/font/fontawesome-webfont.svg#FontAwesomeRegular") format("svg");
    font-weight: normal;
    font-style: normal;
}
* {
    margin: 0;
    padding: 0;
}
html { height: 100% }
body {
    height: 100%;
    color: #333;
    font-family: Georgia,Cambria,"Times New Roman",Times,serif;
    font-weight: 300;
    font-size: 13px;
    background: #2d3339;
}
@media screen and (max-width: 1040px) { 
    body { margin: 0 20px }
}
@media screen and (max-width: 600px) { 
    body { font-size: 13px }
}
h1 { font-size: 1.8em }
h2 { font-size: 1.5em }
h3 { font-size: 1.3em }
a {
    text-decoration: none;
    outline-width: 0;
    color: #4466c5;
}
.alignleft { float: left }
.alignright { float: right }
.clearfix { *zoom: 1 }
.clearfix:after {
    content: "";
    display: table;
    clear: both;
}
.inner {
    width: 1000px;
    margin: 0 auto;
}
@media screen and (max-width: 1040px) { 
    .inner { width: 100% }
}
.pullquote-right:before,
.pullquote-left:before {
    padding: 0;
    border: none;
    content: attr(data-pullquote);
    float: right;
    width: 45%;
    margin: .5em 0 1em 1.5em;
    position: relative;
    top: 7px;
    font-size: 1.4em;
    line-height: 1.45em;
}
.pullquote-left:before {
    float: left;
    margin: .5em 1.5em 1em 0;
}
#header {
    height: 30px;
    padding: 30px 0;
    border-bottom: 1px solid #ddd;
    line-height: 30px;
}
@media screen and (max-width: 1040px) { 
    #header {
        height: auto;
        position: relative;
        padding-bottom: 10px;
    }
}
#header a {
    color: #ddd;
    -webkit-transition: color 0.3s;
    -moz-transition: color 0.3s;
    -o-transition: color 0.3s;
    transition: color 0.3s;
}
#header a:hover { color: #258fb8 }
#header h1 {
    font-family: "Open Sans";
    font-weight: 400;
    font-size: 4em;
    line-height: 0.9;
    float: left;
    width: 100%;
}
@media screen and (max-width: 1040px) { 
    #header h1 { float: none }
}
#header h1 a {
    color: #fff;
    display: block;
    margin: auto;
    width: 210px;
    margin: 0;
}
@media screen and (max-width: 600px) { 
    #header h1 a { margin: auto }
}
#header h2 {
    font-family: "Open Sans";
    font-style: italic;
    font-weight: 400;
}
#main-nav {
    font-family: "Open Sans";
    float: left;
    margin-left: 30px;
}
@media screen and (max-width: 1040px) { 
    #main-nav {
        float: none;
        margin-left: 0;
        margin-top: 15px;
    }
}
@media screen and (max-width: 600px) { 
    #main-nav>ul { display: none }
}
#main-nav>ul>li {
    margin-left: 50px;
    display: -moz-inline-stack;
    display: inline-block;
    vertical-align: middle;
    *vertical-align: auto;
    zoom: 1;
    *display: inline;
}
@media screen and (max-width: 1040px) { 
    #main-nav>ul>li {
        margin-left: 0;
        margin-right: 50px;
    }
    #main-nav>ul>li:last-of-type { margin-right: 0 }
}
#main-nav>ul>li:hover>a { color: #258fb8 }
#main-nav>ul>li>a {
    padding: 38px 0;
    margin-top: -38px;
}
#main-nav>ul>li>a:after {
    content: "\f078";
    color: #ccc;
    font: 12px FontAwesome;
    padding-left: 10px;
}
#main-nav>ul>li>a:only-child:after { content: "" }
@media screen and (max-width: 1040px) { 
    #main-nav>ul>li>a { padding: 18px 0 }
}
@media screen and (max-width: 1040px) { 
    #main-nav>ul ul { top: 40px }
}
@media screen and (max-width: 1040px) { 
    #sub-nav {
        position: absolute;
        top: 30px;
        right: 0;
    }
}
@media screen and (max-width: 600px) { 
    #sub-nav { display: none }
}
#sub-nav .social {
    float: left;
    margin-right: 15px;
}
@media screen and (max-width: 1040px) { 
    #sub-nav .social {
        float: none;
        margin-right: 0;
    }
    #sub-nav .social a:last-of-type { margin-right: 0 }
}
#sub-nav .social a {
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    border-radius: 50%;
    display: -moz-inline-stack;
    display: inline-block;
    vertical-align: middle;
    *vertical-align: auto;
    zoom: 1;
    *display: inline;
    text-indent: -9999px;
    margin: 0 15px 15px 0;
    opacity: 0.5;
    width: 28px;
    height: 28px;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}
#sub-nav .social a:hover { opacity: 1 }
#sub-nav .social a.twitter {
    background: url('/images/social/twitter.png?1385702818') center no-repeat #55cff8;
    border: 1px solid #55CFF8;
}
#sub-nav .social a.twitter:hover { border: 1px solid #24c1f6 }
#sub-nav .social a.github {
    background: url('/images/social/github.png?1385702818') center no-repeat #afb6ca;
    border: 1px solid #afb6ca;
}
#sub-nav .social a.github:hover { border: 1px solid #909ab6 }
#sub-nav .social a.rss {
    background: url('/images/social/rss.png?1385702818') center no-repeat #ef7522;
    border: 1px solid #EF7522;
}
#sub-nav .social a.rss:hover { border: 1px solid #cf5d0f }
#pagenavi {
    padding: 20px 0;
    height: 20px;
    line-height: 20px;
    position: relative;
    border-top: 1px solid #fff;
    border-bottom: 1px solid #ddd;
}
#pagenavi a:hover { text-decoration: underline }
#pagenavi .prev,
#pagenavi .next { position: absolute }
#pagenavi .prev {
    padding-left: 30px;
    left: 0;
}
#pagenavi .prev:before {
    content: "\f060";
    font: 1.3em FontAwesome;
    position: absolute;
    left: 0;
}
#pagenavi .next {
    padding-right: 30px;
    right: 0;
}
#pagenavi .next:before {
    content: "\f061";
    font: 1.3em FontAwesome;
    position: absolute;
    right: 0;
}
#pagenavi .center {
    text-align: center;
    width: 100%;
    display: block;
}
/* ... */

